
_G.LSOL_VERSION history

1 - released to Play Store 2022-03-28 internal test

2 - released to Play Store 2022-03-28 closed test

3 -
	Agnes x 2
	Assembly
	Russian (Yukon)
	Ukrainian/Crimean

6 - released to Play Store 2022-04-22 beta

7 - released to Play Store 2022-04-27 production
	removed are you sure message box when recording lost game (toast instead)
	pcall around json.decode
	toast displayed when version updates
	removed font:getHeight() argument
	removed several log messages
	added more stats

8 - released to Play Store 2022-05-03 production
	bug fixes to Little Spider
	Assembly waste pile changed from FAN_RIGHT to FAN_RIGHT3
	About...
	layout variants stats stored under original variant stats
	bug fix: title and status bars could be vscrolled

9 - released to Play Store 2022-05-06 production
	Pyramid/Pyramid Relaxed
	bug fix to Rosamund
	unsimple card back simplified
	tweaks to About...

10 - released to Play Store 2022-05-11 production
	new variants: Algerian, Gargantua, Giant, Miss Milligan, Mount Olympus, Royal Cotillion
	BUG FIX - Klondike had 8 piles, should have been 7!
	(saved game of Klondike will not load, just restart deal)
	window size, position, display restored when not on Android
	settings moved from baize to global

11 -
	Busy Aces
	slightly annoying sad whistle fail sound
	slightly darker background
	one card width margin either side of cards when in landscape